# agent-context-snapshot

./: README.md  pyproject.toml
src/agent_context_snapshot/: __init__.py  core.py
tests/: test_agent_context_snapshot.py
