[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-context-snapshot"
version = "0.1.0"
description = "Point-in-time snapshots of agent conversation state for debugging and checkpointing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_context_snapshot"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
